manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    app: devops1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops1
  template:
    metadata:
      labels:
        app: devops1
    spec:
      containers:
      - name: devops1
        image: chitrika123/devops-1:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
